<resources>
  <string name="sonar_app_name" translatable="false">Sonar</string>
  <string name="action_settings">Settings</string>
  <string name="title_activity_editor">Editor</string>
  <string name="voting_card_title">%1$d of %2$d</string>
  <string name="question_title">Question title</string>
  <string name="option_name">Option name</string>
  <string name="intro_error_empty_name">You need to enter a name</string>
  <string name="intro_error_short_name">You need to enter a longer name</string>

  <string name="help_privacy"><![CDATA[<p>In addition to usual poll responses, you can get more info:
<div><strong>Private votes</strong>: you will know who and what his responses were.</div>
<div><strong>Anonymous votes</strong>: you will know who sent their responses.</div>
<div><strong>Secret votes</strong>: you won\'t know who voted.</div></p>]]></string>
  <string name="help_password">You can protect your poll with a password. Users will have to enter it in order to answer.</string>
  <string name="voting_privacy_public">All questions are mandatory. Your identity and your answers will be shared with the interviewer.</string>
  <string name="voting_privacy_anonymous">All questions are mandatory. Your identity will only be shared to know if you sent your answers.</string>
  <string name="voting_privacy_secret">All questions are mandatory. Your answers will be taken into account but your identity is completely hidden.</string>
  <string name="intro_need_username">In order to use this app you need a username</string>
  <string name="intro_app_description">Sonar allows you to make small questionnaires and polls to users in your proximity.</string>
  <string name="subscribe">Discover nearby polls</string>
  <string name="intro_hint_your_username">Your username</string>
  <string name="debug_voting_ui" translatable="false">Voting UI</string>
  <string name="send">Send</string>
  <string name="activate">Activate</string>
  <string name="deactivate">Deactivate</string>
  <string name="password">Password</string>
  <string name="vote_privacy">Vote privacy</string>
  <string name="binary">Binary Question</string>
  <string name="multiple_options">Multiple options</string>
  <string name="rate">Rate Question</string>
  <string name="yes_no">Yes/No</string>
  <string name="true_false">True/False</string>
  <string name="customize">Customize</string>
  <string name="first_option">First option</string>
  <string name="second_option">Second Option</string>
  <string name="password_unlock">This poll is password protected. Please enter the password below to unlock it.</string>
  <string name="delete">Delete</string>
  <string name="more_settings">More settings</string>
  <string name="voters">Voters</string>
  <string name="create_poll">New poll</string>
  <string name="poll_title">Poll title</string>
  <string name="option_stars">1 to 5 stars</string>
  <string name="option_like_dislike">Like/Dislike</string>
  <string name="option_zero_ten">Rate from 0 to 10</string>
  <string name="minimum">Minimum</string>
  <string name="maximum">Maximum</string>
  <string name="can_check_multiple_options">Allow checking multiple options</string>
  <string name="status_no_votes_received">No votes received in this session</string>
  <string name="status_stopping">Stopping…</string>
  <string name="status_poll_available">Poll is available</string>
  <string name="status_trying_poll_available">Trying to make poll available</string>
  <string name="status_sending_answers">Sending answers. They might be lost if you close the app.</string>
  <string name="status_could_not_send">Could not send answers</string>
  <string name="details_rate_name">Rating: %s</string>
  <string name="rating_details_average">Average rating: %s</string>
  <string name="summary_most_voted">Most voted: </string>
  <string name="summary_no_votes">No respones yet</string>
  <string name="dashboard_question_counter">%d questions</string>
  <string name="received_vote_from">Got vote from %s</string>
  <string name="received_votes_counter">%d votes in this session</string>
  <string name="editor_item_title" translatable="false">%1$d. %2$s</string>
  <string name="dashboard_welcome">Welcome!\n\nYou can start by creating a new poll or by listening for nearby ones</string>
  <string name="untitled_poll">Untitled Poll</string>
  <string name="understood">Got it</string>
  <string name="help_dialog_title">What\'s this?</string>
  <string name="unlock_dialog_title">Unlock poll</string>
  <string name="wrong_password">Wrong password</string>
  <string name="status_searching">Searching for nearby polls…</string>
  <string name="cancelling">Cancelling</string>
  <string name="status_vote_sent">Vote sent. You can exit now.</string>
  <string name="voted_by">Voted by</string>
  <string name="status_publish_expired">Poll no longer available. Waiting for votes a little longer…</string>
  <string name="edit">Edit</string>
  <string name="poll_untitled_editor">%s\'s poll</string>
  <string name="save">Save</string>
  <string name="discard">Discard</string>
  <string name="status_listening_votes">Now listening for votes</string>
  <string name="status_trying_listening_votes">\nStarting to listen for votes</string>
  <string name="empty_editor">Set up your poll and add questions. They will appear here.</string>
  <string name="elapsed">%s elapsed</string>
  <string name="edit_only_without_answers">You can only edit polls that do not have any answers yet.</string>
  <string name="do_you_really_want_to_exit">Any changes will be lost. Do you really want to exit?</string>
  <string name="status_trying_to_send">Trying to send your answers</string>
  <string name="discover">Discover</string>

  <string-array name="array_privacy_intervals">
    <item>Public</item>
    <item>Anonymous</item>
    <item>Secret</item>
  </string-array>

</resources>
